# khisto-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  demo.html  genindex.html  index.html  objects.inv  pre-commit-config.yaml  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.py  test_ridgeplot_refactor.py
.github/workflows/: ci.yml  docs.yaml  pack-pip.yaml  pack-pip.yml
_sources/: index.rst.txt
array/histogram/: index.html
core/: index.html
docs/: API.md  API_COMPARISON.md  api_comparison.md  api_comparison.rst  conf.py  demo.ipynb  index.rst  requirements.txt
docs/_static/css/: custom.css
docs/array/histogram/: index.rst
docs/core/: index.rst
docs/matplotlib/: index.rst
matplotlib/: index.html
sandbox/: array.ipynb  core.ipynb  cumulative_example.ipynb  khisto_demo.ipynb  matplotlib_histogram_examples.ipynb  plotly_examples.ipynb  ridgeplot_example.ipynb
scripts/: check-obsolete-copyright.py  generate_distribution_examples.py  update-copyright.py
src/khisto/: __init__.py  typing.py
src/khisto/array/: __init__.py  _shared.py  cumulative.py  histogram.py
src/khisto/array/cumulative/: __init__.py  api.py  core.py  utils.py
src/khisto/array/histogram/: __init__.py  api.py
src/khisto/core/: __init__.py  backend.py  cli_adapter.py
src/khisto/matplotlib/: __init__.py  cumulative.py  ecdf.py  hist.py  histogram.py
src/khisto/plot/: __init__.py
src/khisto/plot/plotly/: __init__.py  cumulative.py  histogram.py
src/khisto/plotly/: __init__.py  cumulative.py  ecdf.py  histogram.py  ridgeplot.py
src/khisto/utils/: __init__.py  array_backend.py  arrow.py  narwhals.py
src/khisto/utils/_compat/: __init__.py  _optional.py
tests/: conftest.py
tests/array/: test_ecdf_evaluate.py  test_histogram.py
tests/core/: test_backend.py  test_cli_adapter.py
tests/plot/: __init__.py  test_matplotlib_cumulative.py  test_matplotlib_ecdf.py  test_matplotlib_histogram.py  test_plotly_cumulative.py  test_plotly_ecdf.py  test_plotly_histogram.py  test_plotly_ridgeplot.py
