[project]
name = "khisto"
version = "0.1.0"
description = "Optimal histogram visualization using the Khiops algorithm"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.8"]
all = ["matplotlib>=3.8"]


[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-xdist>=3.6",
    "pytest-cov>=6",
    "pytest-sugar>=1.0",
    "pre-commit>=4.1",
    "pre-commit-hooks>=5.0",
    "ruff>=0.9",
    "ipykernel>=7",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-n 4 --cov --cov-report term-missing --durations=10"
testpaths = ["tests"]

[tool.bandit]
skips = ['B403', 'B301']

[tool.codespell]
skip = '*.ipynb,./src/verbascope/assets,./sandbox,./scripts,./build/doc,./CHANGELOG.md,./doc,./poetry.lock,./src/khiops'
ignore-words-list = "blocs, coo, hist, nd, sav, ser, recuse, nin, verbascope"
ignore-regex = 'https://([\w/\.])+'
quiet-level = 3

[tool.ruff]

# Group violations by containing file.
output-format = "grouped"
line-length = 88
indent-width = 4

# Enable fix by default
fix = true

# Exclude a variety of commonly ignored directories.
extend-exclude = ["src/khiops"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

[tool.ruff.lint]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []
ignore = [
    "E402", # module level import not at top of file
]

[tool.pyrefly]
project-excludes = ["src/khiops"]
