[project]
name = "khisto"
version = "0.1.0"
description = "Optimal histogram visualization using the Khiops algorithm"
readme = "README.md"
license = "BSD-3-Clause-Clear"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["numpy>=2.0"]

[tool.khiops]
khiops-version = "11.0.1-a.2"

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.8"]
all = ["matplotlib>=3.8"]


[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-xdist>=3.6",
    "pytest-cov>=6",
    "pytest-sugar>=1.0",
    "pre-commit>=4.1",
    "pre-commit-hooks>=5.0",
    "ruff>=0.9",
    "ipykernel>=7",
    "matplotlib>=3.8",
]

[build-system]
requires = ["scikit-build-core>=0.11.6", "ninja"]
build-backend = "scikit_build_core.build"

[tool.pytest.ini_options]
addopts = "-n 4 --cov --cov-report term-missing --durations=10"
testpaths = ["tests"]

[tool.bandit]
skips = ['B403', 'B301']

[tool.codespell]
skip = '*.ipynb,./src/verbascope/assets,./sandbox,./scripts,./build/doc,./CHANGELOG.md,./doc,./poetry.lock,./src/khiops'
ignore-words-list = "blocs, coo, hist, nd, sav, ser, recuse, nin, verbascope"
ignore-regex = 'https://([\w/\.])+'
quiet-level = 3

[tool.ruff]

# Group violations by containing file.
output-format = "grouped"
line-length = 88
indent-width = 4

# Enable fix by default
fix = true

# Exclude a variety of commonly ignored directories.
extend-exclude = ["scripts", "docs", "sandbox", ".github"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

[tool.ruff.lint]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []
ignore = [
    "E402", # module level import not at top of file
]

[tool.scikit-build]
# Source distribution file selection (initial selection from .gitignore)
sdist.exclude = [".*"]
# We specify full compatibility with all Python 3 releases
wheel.py-api = "py3"
# Read CMake minimal version from file
cmake.version = "CMakeLists.txt"
# Generator specification and build configuration
cmake.args = ["-G", "Ninja"]
# CMake variables
# Build khisto binary in Release mode for better performance, as it is not intended for debugging
cmake.define.CMAKE_BUILD_TYPE = "Release"
# Options
cmake.define.MPI = false
cmake.define.TESTING = false
cmake.define.BUILD_LEX_YACC = false
cmake.define.BUILD_JARS = false
cmake.define.GENERATE_VIEWS = false
cmake.define.C11 = true
# Force the use of Ninja for fast builds
ninja.make-fallback = false
# Build only khisto
build.targets = ["khisto"]
# Only install KHISTO component in wheel
install.components = ["KHISTO"]

[tool.cibuildwheel]
# Khiops does not compile when using musl as the C standard library
skip = "*musllinux*"
# Install shared libraries in wheel using only CMake, so remove the default command
repair-wheel-command = ""

# Install build-time dependencies in containers created by cibuildwheel
# This is compatible with Debian-like and Fedora-like distributions
[tool.cibuildwheel.linux]
before-all = [
    "DEPS='zip perl ninja-build'",
    "apt-get install -y $DEPS || dnf install -y $DEPS",
]
